--- a/fitness tracker/Base.lproj/Main.storyboard
+++ b/fitness tracker/Base.lproj/Main.storyboard
@@ -374,7 +374,7 @@
         <!--Track Run-->
         <scene sceneID="6wf-aq-uwg">
             <objects>
-                <viewController id="6MM-t9-3C4" sceneMemberID="viewController">
+                <viewController id="6MM-t9-3C4" customClass="TrackRunVC" customModule="fitness_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ASw-Jd-DxB"/>
                         <viewControllerLayoutGuide type="bottom" id="5z1-q1-Kmj"/>
@@ -401,15 +401,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTV-YW-WwJ">
-                                <rect key="frame" x="115" y="281" width="54" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0'00&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfz-pS-bAt">
-                                <rect key="frame" x="207" y="281" width="63" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTV-YW-WwJ">
+                                <rect key="frame" x="105" y="281" width="107" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
@@ -423,6 +416,9 @@
                                 <state key="normal" title="Start/Pause">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="startStopTimer:" destination="6MM-t9-3C4" eventType="touchUpInside" id="PnA-Y2-os0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ca-zn-bke">
                                 <rect key="frame" x="115" y="434" width="155" height="42"/>
@@ -432,15 +428,31 @@
                                 <state key="normal" title="Finish">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="finishRun:" destination="6MM-t9-3C4" eventType="touchUpInside" id="SEo-Ll-Khw"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0'00&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfz-pS-bAt">
+                                <rect key="frame" x="234" y="281" width="63" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Track Run" id="gSQ-ka-Xk6"/>
+                    <connections>
+                        <outlet property="mileageLabel" destination="Vk3-3Z-hxH" id="vOz-ys-88V"/>
+                        <outlet property="paceLabel" destination="tfz-pS-bAt" id="euK-OS-V00"/>
+                        <outlet property="startStopLabel" destination="f07-Kv-eaw" id="pOi-b9-vd9"/>
+                        <outlet property="timerLabel" destination="LTV-YW-WwJ" id="AbI-c2-XFo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zcg-Az-hoV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3900" y="-101"/>
+            <point key="canvasLocation" x="3900" y="-101.19940029985008"/>
         </scene>
         <!--Running2-->
         <scene sceneID="qrJ-4l-tzn">
